added individual poll's show route and new route

--- a/views/polls/index.ejs
+++ b/views/polls/index.ejs
@@ -1,10 +1,9 @@
 <h1>Mike's Voting App</h1>
 
-<h2>New Poll:</h2>
+<a href="/polls/new">New Poll</a>
 
-<form action="/polls" method="POST">
-    <input type="text" name="title" placeholder="Title of poll">
-    <input type="text" name="option1" placeholder="Option 1">
-    <input type="text" name="option2" placeholder="Option 2">
-    <button class="button expanded">Submit</button>
-</form>
+
+<h3>Previous polls below</h3>
+<% polls.reverse().forEach(function(poll) { %>
+    <h4><%= poll.title %> - <a href="/polls/<%= poll._id %>">View</a></h4>
+    <% }); %>
