--- a/views/polls/show.ejs
+++ b/views/polls/show.ejs
@@ -1,20 +1,9 @@
 <h1><%= poll.title %></h1>
 <% poll.options.forEach(function(option){ %>
+
     <h3><%= option.text %> - Current count: <%=option.count %></h3>
     <form action="/polls/<%= poll._id %>?_method=PUT" method="POST">
-        <button>VOTE</button>
+        <button name="votedFor" value="<%= option._id %>">VOTE</button>
     </form>
     
-    
-    
-    
 <% }); %>
-
-<script>
-var onVote = function() {
-    var vote = {
-        text: option,
-        count: {type: Number, default: 0}
-    }
-}
-</script>
