--- a/views/polls/new.ejs
+++ b/views/polls/new.ejs
@@ -1,3 +1,5 @@
+<% include ../partials/header %>
+
 <form action="/polls" method="POST">
     <input type="text" name="title" placeholder="Title of poll">
     <div id="options">
