--- a/views/polls/show.ejs
+++ b/views/polls/show.ejs
@@ -1,9 +1,46 @@
-<h1><%= poll.title %></h1>
-<% poll.options.forEach(function(option){ %>
+<% include ../partials/header %>
 
-    <h3><%= option.text %> - Current count: <%=option.count %></h3>
-    <form action="/polls/<%= poll._id %>?_method=PUT" method="POST">
-        <button name="votedFor" value="<%= option._id %>">VOTE</button>
-    </form>
-    
-<% }); %>
+
+<section class="text-center">
+    <h1><%= poll.title %></h1>
+    <% poll.options.forEach(function(option){ %>
+        <h3><%= option.text %> - Current count: <%=option.count %></h3>
+        <form action="/polls/<%= poll._id %>?_method=PUT" method="POST">
+            <button name="votedFor" value="<%= option._id %>">VOTE</button>
+        </form>
+    <% }); %>   
+</section>
+
+<div id="piechart" style="width: 900px; height: 500px;"></div>
+
+
+
+
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: '<%= poll.title %>'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+    </script>
+
+<% include ../partials/footer %>
