finished with version 1 functionality

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -38,6 +38,11 @@ h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
+.option-text {
+  padding-top: 1rem;
+  color:blue;
+}
+
 .bg-primary {
   background-color: #F05F40 !important;
 }
@@ -51,7 +56,7 @@ h6 {
 }
 
 section {
-  padding: 8rem 0;
+  padding: 5rem 0;
 }
 
 .section-heading {
@@ -167,8 +172,10 @@ img::-moz-selection {
 }
 
 header.masthead {
+  margin-top: -57px;
   padding-top: 10rem;
-  padding-bottom: calc(10rem - 56px);
+  /*padding-bottom: calc(10rem - 56px);*/
+  height:100vh;
   background-image: url("https://images.unsplash.com/photo-1494172892981-ce47ca685eea?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=43c51837c1607b1ad800567598a1b579&auto=format&fit=crop&w=1502&q=80");
   background-position: center center;
   -webkit-background-size: cover;
@@ -192,7 +199,7 @@ header.masthead p {
 
 .overlay {
   position:absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   top: 0;
   bottom: 0;
   height:100%;
@@ -226,69 +233,6 @@ header.masthead p {
 
 .service-box {
   max-width: 400px;
-}
-
-.portfolio-box {
-  position: relative;
-  display: block;
-  max-width: 650px;
-  margin: 0 auto;
-}
-
-.portfolio-box .portfolio-box-caption {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  opacity: 0;
-  color: #fff;
-  background: rgba(240, 95, 64, 0.9);
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  transform: translateY(-50%);
-  text-align: center;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  padding: 0 15px;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-  font-size: 14px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  font-size: 18px;
-}
-
-.portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
-}
-
-.portfolio-box:focus {
-  outline: none;
-}
-
-@media (min-width: 768px) {
-  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-    font-size: 16px;
-  }
-  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    font-size: 22px;
-  }
 }
 
 .text-primary {
@@ -325,6 +269,4 @@ section#contact {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-/*section hr {*/
-/*      border-color: rgba(0, 0, 0, 0.7);*/
-/*}*/
+
