--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,17 @@
 <% include ./partials/header %>
 
-<div class="container">
-    <h1>Sign In</h1>
+<div class="container text-center">
+    <h1>Login</h1>
     
     <form action="/login" method='POST'>
+    <div class="form-group">
         <input type="text" name="username" placeholder="Username">
+    </div>
+    <div class="form-group">
         <input type="password" name="password" placeholder="Password">
-        <button>Sign Up</button>
+    </div>
+    <button class="btn btn-primary">Sign Up</button>
     </form>
-    
 </div>
 
 
