--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,6 @@
   <meta name="author" content="Michael Claus">
   <meta name="description" content="Voting App">
   <meta name="keywords" content="vote voting application app node express">
-  <base href="/">
   
   <!--<link href="https://fonts.googleapis.com/css?family=Heebo:300,400,500,700" rel="stylesheet">-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -21,7 +20,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css" />
   </head>
 <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-dark" id="mainNav">
@@ -32,17 +31,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
-              </li>            
             <% if (!currentUser) { %>
               <li class="nav-item">
                 <a class="nav-link" href="/signup">Sign Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">Sign In</a>
+                <a class="nav-link" href="/login">Login</a>
               </li>
             <% } else {  %>
+              <li class="nav-item">
+                <a class="nav-link" href="/polls/mypolls">My Polls</a>
+              </li>            
               <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
               </li>
