--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,14 +1,17 @@
 <% include ./partials/header %>
 
-<div class="container">
+<div class="container text-center">
     <h1>Sign Up</h1>
     
     <form action="/signup" method='POST'>
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <button>Sign Up</button>
+        <div class="form-group">
+            <input type="text" name="username" placeholder="Username">    
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" placeholder="Password">    
+        </div>
+        <button class="btn btn-primary">Sign Up</button>
     </form>
-    
 </div>
 
 
