--- a/views/polls/new.ejs
+++ b/views/polls/new.ejs
@@ -1,21 +1,33 @@
-<% include ../partials/header %>
-
-<form action="/polls" method="POST">
-    <input type="text" name="title" placeholder="Title of poll">
-    <div id="options">
-        <input type="text" name="options[0][text]" placeholder="Option 1">
-        <input type="text" name="options[1][text]" placeholder="Option 2">
+<% include ../partials/header2 %>
+<section>
+    <div class="container text-center">
+        <h1>Create New Poll</h1>
+        <form action="/polls" method="POST">
+            <div class="form-group">
+                <input type="text" name="title" placeholder="Title of poll">    
+            </div>
+            
+            <div id="options">
+                <div class="form-group">
+                    <input type="text" name="options[0][text]" placeholder="Option 1">    
+                </div>
+                <div class="form-group">
+                    <input type="text" name="options[1][text]" placeholder="Option 2">    
+                </div>
+            </div>
+            <a class="btn btn-secondary" onclick="addOption()">Add option</a>
+            <button class="btn btn-primary">Submit</button>
+        </form>        
     </div>
-    <p class="button" onclick="addOption()">Add option</p>
-    <button class="button expanded">Submit</button>
-</form>
+</section>
+
 
 <script>
 var nextOptionIndex = 2;
 // var newOptionHTML = '<input type="text" name="options[' + nextOptionIndex + ']" placeholder="Option ' + nextOptionIndex + '">';
 
 var addOption = function() {
-    document.getElementById("options").innerHTML += '<input type="text" name="options[' + nextOptionIndex + '][text]" placeholder="Option ' + (nextOptionIndex + 1) + '">';
+    document.getElementById("options").innerHTML += '<div class="form-group"><input type="text" name="options[' + nextOptionIndex + '][text]" placeholder="Option ' + (nextOptionIndex + 1) + '"></div>';
     console.log(nextOptionIndex)
     nextOptionIndex+=1;
     console.log(nextOptionIndex)
