a few style changes

--- a/views/polls/index.ejs
+++ b/views/polls/index.ejs
@@ -29,6 +29,7 @@
               <div class="service-box mt-5 mx-auto">
                 <i class="fa fa-4x fa-list-alt text-primary mb-3 sr-icons"></i>
                 <h3 class="mb-3"><%= poll.title %></h3>
+                <h6>Created by: <%= poll.author.username %></h6>
                 <p class="text-muted mb-0"><a href="/polls/<%= poll._id %>" class="btn btn-primary">View</a></p>
               </div>
             </div>
